<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity2">

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/label_to"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvidTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnTo"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#64B1ED"
        android:text="@string/btn_change" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#60CF64"
        android:text="Calcular" />
    <!--Map-->
    <!--Travel Info-->

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="363dp"
        android:layout_height="455dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        tools:context=".MainActivity"
        tools:layout="@layout/map" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingBottom="10dp"
        android:text="@string/label_time"
        android:textSize="34sp" />
</LinearLayout>